--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "webpack-dev-server": "^4.13.1"
   },
   "scripts": {
-    "build": "webpack --watch"
+    "build": "webpack",
+    "build watch": "webpack --watch",
+    "serve":"webpack server --no-stats"
   }
 }
